human-intervention-logs/com.google.appengine:appengine-api-1.0-sdk:2.0.32/gradle-test/gradle-test-2026-06-10T06-41-01-612467Z.log
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE

> Configure project :
GraalVM Reachability Metadata TCK
---------------------------------

> Task :tckTest
====================
Testing library: com.google.appengine:appengine-api-1.0-sdk:2.0.32
Command: `/home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/4692-3813fd9a/gradlew nativeTest`
Executing test...
-------
> Task :tck-build-logic:extractPluginRequests UP-TO-DATE
> Task :tck-build-logic:generatePluginAdapters UP-TO-DATE
> Task :tck-build-logic:compileJava UP-TO-DATE
> Task :tck-build-logic:compileGroovy UP-TO-DATE
> Task :tck-build-logic:compileGroovyPlugins UP-TO-DATE
> Task :tck-build-logic:pluginDescriptors UP-TO-DATE
> Task :tck-build-logic:processResources UP-TO-DATE
> Task :tck-build-logic:classes UP-TO-DATE
> Task :tck-build-logic:jar UP-TO-DATE
> Task :compileJava NO-SOURCE
> Task :processResources NO-SOURCE
> Task :classes UP-TO-DATE
> Task :tck-test-support:compileJava UP-TO-DATE
> Task :tck-test-support:processResources NO-SOURCE
> Task :tck-test-support:classes UP-TO-DATE
> Task :jar UP-TO-DATE
> Task :tck-test-support:jar UP-TO-DATE
> Task :checkTestTimeoutAnnotations

> Task :compileTestJava FAILED

[Incubating] Problems report is available at: file:///home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/4692-3813fd9a/tests/src/com.google.appengine/appengine-api-1.0-sdk/2.0.32/build/reports/problems/problems-report.html

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.
13 actionable tasks: 2 executed, 11 up-to-date
/home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/4692-3813fd9a/tests/src/com.google.appengine/appengine-api-1.0-sdk/2.0.32/src/test/java/com_google_appengine/appengine_api_1_0_sdk/Appengine_api_1_0_sdkTest.java:55: error: package com.google.protobuf does not exist
import com.google.protobuf.InvalidProtocolBufferException;
                          ^
/home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/4692-3813fd9a/tests/src/com.google.appengine/appengine-api-1.0-sdk/2.0.32/src/test/java/com_google_appengine/appengine_api_1_0_sdk/Appengine_api_1_0_sdkTest.java:108: error: cannot find symbol
        assertThat(entity.getUnindexedProperties()).contains("notes");
                         ^
  symbol:   method getUnindexedProperties()
  location: variable entity of type Entity
/home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/4692-3813fd9a/tests/src/com.google.appengine/appengine-api-1.0-sdk/2.0.32/src/test/java/com_google_appengine/appengine_api_1_0_sdk/Appengine_api_1_0_sdkTest.java:461: error: cannot find symbol
                } catch (InvalidProtocolBufferException ex) {
                         ^
  symbol:   class InvalidProtocolBufferException
  location: class RecordingDelegate
3 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileTestJava'.
> Compilation failed; see the compiler output below.
  /home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/4692-3813fd9a/tests/src/com.google.appengine/appengine-api-1.0-sdk/2.0.32/src/test/java/com_google_appengine/appengine_api_1_0_sdk/Appengine_api_1_0_sdkTest.java:461: error: cannot find symbol
                  } catch (InvalidProtocolBufferException ex) {
                           ^
    symbol:   class InvalidProtocolBufferException
    location: class RecordingDelegate
  /home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/4692-3813fd9a/tests/src/com.google.appengine/appengine-api-1.0-sdk/2.0.32/src/test/java/com_google_appengine/appengine_api_1_0_sdk/Appengine_api_1_0_sdkTest.java:108: error: cannot find symbol
          assertThat(entity.getUnindexedProperties()).contains("notes");
                           ^
    symbol:   method getUnindexedProperties()
    location: variable entity of type Entity
  /home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/4692-3813fd9a/tests/src/com.google.appengine/appengine-api-1.0-sdk/2.0.32/src/test/java/com_google_appengine/appengine_api_1_0_sdk/Appengine_api_1_0_sdkTest.java:55: error: package com.google.protobuf does not exist
  import com.google.protobuf.InvalidProtocolBufferException;
                            ^
  3 errors

* Try:
> Check your code and dependencies to fix the compilation error(s)
> Run with --scan to generate a Build Scan (Powered by Develocity).

BUILD FAILED in 2s

> Task :tckTest FAILED

[Incubating] Problems report is available at: file:///home/vjovanov/c/forge/forge1/graalvm-reachability-metadata/forge/local_repositories/forge_worktrees/4692-3813fd9a/build/reports/problems/problems-report.html

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':tckTest'.
> Test for com.google.appengine:appengine-api-1.0-sdk:2.0.32 failed with exit code 1.

* Try:
> Run with --stacktrace option to get the stack trace.
> Run with --info or --debug option to get more log output.
> Run with --scan to generate a Build Scan (Powered by Develocity).
> Get more help at https://help.gradle.org.

Deprecated Gradle features were used in this build, making it incompatible with Gradle 10.

You can use '--warning-mode all' to show the individual deprecation warnings and determine if they come from your own scripts or plugins.

For more on this, please refer to https://docs.gradle.org/9.1.0/userguide/command_line_interface.html#sec:command_line_warnings in the Gradle documentation.

BUILD FAILED in 4s
9 actionable tasks: 1 executed, 8 up-to-date
